# jazzer

./: .bazelignore  .bazelrc  .bazelversion  .clang-format  .gitattributes  .gitignore  BUILD.bazel  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MODULE.bazel  README.md  REPO.bazel  WORKSPACE.bazel  WORKSPACE.bzlmod  format.sh  init.bzl  jazzer-api.pom  log  maven.bzl  maven_artifacts.bzl  maven_install.json  platform_mappings  renovate.json  renovate.json5  repositories.bzl  rules_jvm_external_deps_install.json  run.sh
.github/: BUILD.bazel
.github/scripts/: echoBuildBuddyConfig.sh
.github/workflows/: build-replayer.yml  check-formatting.yml  cred-sweeper.yml  datadog.yaml  fuzzing-featured.yaml  fuzzing.yaml  fuzzing.yml  oss-fuzz.yml  prerelease.yaml  release.yml  run-all-tests-main.yml  run-all-tests-pr.yml  run-all-tests.yml
agent/: BUILD.bazel  agent_shade_rules  verify_shading.sh
agent/src/main/java/jaz/: BUILD.bazel  Zer.java
bazel/coverage/: BUILD.bazel  coverage.sh
bazel/toolchains/: BUILD.bazel  editorconfig.ktlint
bazel/tools/java/: BUILD.bazel
deploy/: BUILD.bazel  deploy.sh  deploy_local.sh  jazzer-api.pom  jazzer-api_artifact_test.sh  jazzer-junit.pom  jazzer-junit_artifact_test.sh  jazzer.pom  jazzer_artifact_test.sh  jazzer_version_test.sh  maven.pub  verify_shading.sh
driver/: BUILD.bazel  coverage_tracker.cpp  coverage_tracker.h  fuzz_target_runner.cpp  fuzz_target_runner.h  fuzzed_data_provider.cpp  fuzzed_data_provider.h  fuzzed_data_provider_test.cpp  java_reproducer.cpp  java_reproducer.h  java_reproducer_templates.h  jazzer_main.cpp  jvm_tooling.cpp  jvm_tooling.h  jvm_tooling_test.cpp  libfuzzer_callbacks.cpp  libfuzzer_callbacks.h  libfuzzer_driver.cpp  libfuzzer_driver.h  libfuzzer_fuzz_target.cpp  native_fuzzer_hooks.c  rtld_global_hack.cpp  sanitizer_hooks_with_pc.cpp  sanitizer_hooks_with_pc.h  sanitizer_hooks_with_pc_test.cpp  sanitizer_symbols.cpp  sanitizer_symbols_for_tests.cpp  severity_annotator.cpp  severity_annotator.h  signal_handler.cpp  signal_handler.h  test_main.cpp  utils.cpp  utils.h
driver/testdata/: BUILD.bazel
driver/testdata/test/: FuzzTargetWithCoverage.java  FuzzTargetWithDataProvider.java  FuzzTargetWithInit.java  PropertyPrinter.java  SimpleFuzzTarget.java
examples/: BUILD.bazel  check_for_finding.sh  json_sanitizer_denylist_crash  labels.bzl
examples/junit/: README.md  junit-platform.properties  pom.xml
examples/junit-spring-web/: build-and-run-tests.sh  pom.xml
examples/junit-spring-web/src/test/resources/: application.properties
examples/junit/src/test/resources/: BUILD.bazel  junit-platform.properties
examples/src/main/java/com/example/: BatikTranscoderFuzzer.java  CommonsTextFuzzer.java  CommonsTextFuzzerHooks.java  ExampleFuzzer.java  ExampleFuzzerHooks.java  ExampleFuzzerWithNative.java  ExampleKotlinFuzzer.kt  ExampleKotlinValueProfileFuzzer.kt  ExampleOutOfMemoryFuzzer.java  ExamplePathTraversalFuzzer.java  ExamplePathTraversalFuzzerHooks.java  ExampleStackOverflowFuzzer.java  ExampleValueProfileFuzzer.java  ExpressionLanguageInjection.java  FastJsonFuzzer.java  GifImageParserFuzzer.java  JacksonCborFuzzer.java  JpegImageParserFuzzer.java  JsonSanitizerCrashFuzzer.java  JsonSanitizerDenylistFuzzer.java  JsonSanitizerFuzzer.java  JsonSanitizerIdempotenceFuzzer.java  JsonSanitizerValidJsonFuzzer.java  KlaxonFuzzer.kt  Log4jFuzzer.java  MazeFuzzer.java  RethrowFuzzerSecurityIssueTest.java  RethrowFuzzerSecurityIssueTestHooks.java  SpringCloudFunctionRoutingFuzzer.java  TiffImageParserFuzzer.java  TurboJpegFuzzer.java
examples/src/main/native/: BUILD.bazel  com_example_ExampleFuzzerWithNative.cpp  com_example_ExampleFuzzerWithNative.h
examples/src/main/native/com/example/: BUILD.bazel  com_example_ExampleFuzzerWithNative.cpp
launcher/: BUILD.bazel  fuzzed_data_provider_test.cpp  jazzer_main.cpp  jvm_tooling.cpp  jvm_tooling.h  jvm_tooling_test.cpp  test_main.cpp
launcher/android/: AndroidManifest.xml  BUILD.bazel
launcher/testdata/: BUILD.bazel
launcher/testdata/test/: ModifiedUtf8Encoder.java  PropertyPrinter.java
sanitizers/: BUILD.bazel  sanitizers.bzl
sanitizers/src/main/java/jaz/: BUILD.bazel  Ter.java  Zer.java
sanitizers/src/test/java/com/example/: AbsoluteFilePathTraversal.java  BUILD.bazel  ClassLoaderLoadClass.java  ClojureTests.java  DisabledHooksTest.java  ExpressionLanguageInjection.java  FilePathTraversal.java  FilePathTraversalCrash.java  FilePathTraversalPass.java  InsecureEmailValidator.java  LdapDnInjection.java  LdapSearchInjection.java  LibraryLoad.java  ObjectInputStreamDeserialization.java  OsCommandInjectionProcessBuilder.java  OsCommandInjectionRuntimeExec.java  ReflectiveCall.java  RegexCanonEqInjection.java  RegexInsecureQuoteInjection.java  RegexRoadblocks.java  RegexSplitInjection.java  ScriptEngineInjection.java  SqlInjection.java  SsrfAllowUntilConfigured.java  SsrfHttpClient.java  SsrfSocketConnect.java  SsrfSocketConnectToHost.java  SsrfUrlConnection.java  SsrfXmlParser.java  StackOverflowRegexInjection.java  TemplateInjection.java  UnsafeArrayOutOfBounds.java  UnsafeArrayOutOfBoundsValid.java  UnsafeArrayValid.java  XPathInjection.java
selffuzz/: .gitignore  BUILD.bazel  README.md  ci-settings.xml  cifuzz.yaml  pom.xml  selffuzz_shade_rules.jarjar
selffuzz/src/main/: .gitignore
selffuzz/src/test/resources/: .gitignore  BUILD.bazel
src/main/java/com/code_intelligence/jazzer/: BUILD.bazel  Jazzer.java
src/main/native/com/code_intelligence/jazzer/: BUILD.bazel  jazzer_preload.c
src/test/java/com/code_intelligence/jazzer/: BUILD.bazel  JazzerTest.java
tests/: BUILD.bazel
tests/benchmarks/: BUILD.bazel
tests/scripts/: generate_edge_case_classes.py
tests/src/main/java/com/example/: ExampleLongStringFuzzer.java
tests/src/test/cc/: complex_proto_fuzzer.cc
tests/src/test/java/com/example/: JarFuzzer.java  (+86 more)
tests/src/test/proto/: BUILD.bazel  simple_proto.proto
tests/src/test/shell/: crash_resistant_coverage_test.sh  fuzz_test_lister_test.sh  jazzer_from_path_test.sh  junit_agent_configuration_test.sh  print_pcs_symbolization_test.sh
(+845 files in other folders)
