module(
    name = "jazzer",
    version = "0.11.0",
    compatibility_level = 1,
)

bazel_dep(name = "abseil-cpp", version = "20210324.2", repo_name = "com_google_absl")
bazel_dep(name = "bazel_skylib", version = "1.1.1")
bazel_dep(name = "platforms", version = "0.0.4")
bazel_dep(name = "rules_java", version = "5.0.0")
